Fixed issue with tiny profile picture on mobile voortgangpage, added image viewer on project56 page

--- a/css/voortgang.css
+++ b/css/voortgang.css
@@ -16,9 +16,28 @@
   flex: 1 1 50%;
 }
 
+.voortgang{
+  width: 100%;
+}
+
 .streepje{
   height: 1px;
   background: lightgrey;
   width: 100%;
   margin-bottom: 0.5em;
+}
+
+@media only screen and (max-width: 768px) {
+  .profielfoto{
+    padding: 0 !important;
+  }
+
+  .midden_wrapper{
+    padding-left: 10px;
+  }
+
+  .midden_content{
+    padding: 0 0 0 10px;
+  }
+
 }
